# open-finops-pipelines

./: .dockerignore  .gitignore  CLAUDE.md  CLOUD_STORAGE_PLAN.md  Dockerfile  README.md  cloudbuild.yaml  config.example.toml  config.toml.example  duckdb_loader.md  main.py  pyproject.toml  state_refactor.md
finops/: cli.py  config.py
finops/commands/: aws.py  config.py
finops/commands/aws/: __init__.py  utils.py
finops/commands/aws/handlers/: __init__.py  discover_manifests.py  export_parquet.py  extract_billing.py  load_billing_local.py  load_billing_remote.py  run_pipeline.py
finops/commands/azure/: __init__.py
finops/models/: manifest.py
finops/services/: bigquery_loader.py  billing_extractor.py  duckdb_loader.py  duckdb_loader.py.v2  manifest_discovery.py  monthly_pipeline.py  parquet_exporter.py  pipeline_orchestrator.py  schema_manager.py  state_checker.py  state_db.py
planning/: PHASE_2A_APPROVED_PLAN.md  PHASE_2B_STATE_MANAGEMENT_PLAN.md  PHASE_2C_DUCKDB_BACKEND_PLAN.md  PHASE_2D_MANIFEST_DOWNLOAD_PLAN.md  PHASE_2E_DATA_PROCESSING_PLAN.md  PHASE_2F_CLI_INTEGRATION_PLAN.md  PHASE_2_APPROVED_PLAN.md  ROADMAP.md
src/finops/: __init__.py
src/finops/backends/: __init__.py
src/finops/cli/: __init__.py  aws.py  main.py
src/finops/config/: __init__.py  loader.py  schema.py
src/finops/state/: __init__.py  database.py  manager.py
src/finops/vendors/: __init__.py
tests/: test_cli.py  test_cli_aws.py  test_cli_config.py  test_cli_integration.py  test_config.py  test_config_loader.py  test_state_manager.py  test_vendors_aws.py
(+11 files in other folders)
