[project]
name = "finops"
version = "0.1.0"
description = "Open source FinOps data pipelines for cloud billing analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tomli>=2.0.0",
    "pydantic>=2.0.0",
    "boto3>=1.35.0",
]

[project.scripts]
finops = "finops.cli:main"
test = "pytest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "moto[s3]>=5.0.0",
]

