[project]
name = "open-finops-pipelines"
version = "0.1.0"
description = "Open source FinOps data pipelines for cloud billing analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.28.0",
    "duckdb>=0.9.0",
    "toml>=0.10.0",
    "google-cloud-bigquery>=3.0.0",
]

[tool.setuptools.packages.find]
include = ["finops*"]

[project.scripts]
finops = "finops.cli:main"
